yle-dl - download videos from Yle servers
Copyright 2009-2024 Antti Ajanki
Distributed under the GPL v3 or later

<unreleased>

- Python 3.7 is no longer supported. It might work, but is no longer tested.

Version 20240927

- Fixed --maxbitrate and --resolution on a new stream type
- Download episodes if page contain only the "Klipit" tab, not "Jaksot"
- Download correct episodes when some other tab than the default is selected

Version 20240806

- Fixed the bulk download of MOT, Perjantai and possibly other programs

Version 20240706

- Subtitles were not downloaded in some cases
- Fixed downloading in cases when a description text is not available
- New type of podcast streams were showing up as "Unknown stream flavor"

Version 20240429

- New command for recording live TV, the old URL stopped working: yle-dl tv1
- Support for a new stream type introduced in Areena
- Series page downloading was partly broken after changes in Areena
- Some Elävä arkisto/Arkivet pages were broken

Version 20240130

- Fix live download links for Yle Sámi radio, Puhe and Vega radio channels
- Extract inline videos embedded on yle.fi news pages
- Downloading was broken on Python 3.8 since a few releases ago

Version 20231214

- --startposition was not working properly on live streams
- Fixed yle.fi video extraction
- The wget backend works on many streams again

Version 20231120

- Requires Python 3.7+
- Try to detect if the destination filesystem requires a restricted character
  set. Only if an optional dependency python-psutil is installed.
- The metadata now contains just subtitles, not embedded_subtitles
- The subtitle language code in the metadata is correct instead of "unk"
- Create directories by default. Use --no-create-dirs to stop if directory does
  not exist. (This was the previous default.)
- Read configuration from ~/.config/yledl.conf in addition to ~/.yledl.conf
- New output template variables: ${season} and ${episode_or_date}

Version 20230611
