@@ -19,12 +19,9 @@ import ipaddress
 import logging
 import os
 import random
-import re
-import subprocess
 from dataclasses import dataclass, field
 from pathlib import Path
 from typing import Optional
-from .errors import FfmpegNotFoundError
 from .ffprobe import Ffprobe
 from .utils import sane_filename
 
@@ -78,21 +75,6 @@ class IOContext:
             return None
 
         return Ffprobe(self.ffprobe_binary, self.ffmpeg_binary, self.x_forwarded_for)
-
-    def ffmpeg_version(self):
-        if self.ffmpeg_binary:
-            args = [self.ffmpeg_binary, '-loglevel', 'quiet', '-version']
-            try:
-                p = subprocess.run(
-                    args, stdout=subprocess.PIPE, universal_newlines=True
-                )
-                if p.returncode == 0:
-                    first_line = p.stdout.splitlines()[0]
-                    m = re.match(r'ffmpeg version (\d+)\.(\d+)\.(\d+)', first_line)
-                    if m:
-                        return (int(m.group(1)), int(m.group(2)), int(m.group(3)))
-            except FileNotFoundError:
-                raise FfmpegNotFoundError()
 
 
 class OutputFileNameGenerator:
