@@ -4,6 +4,7 @@ Distributed under the GPL v3 or later
 
 <unreleased>
 
+- Fixed subtitle language selection (e.g. --sublang swe) on ffmpeg 7.1
 - Python 3.7 is no longer supported. It might work, but is no longer tested.
 
 Version 20240927
